# extended-data-types

./: .aider.chat.history.md  .aider.input.history  .clinerules  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  ECOSYSTEM_TRIAGE.md  MIGRATION.md  Makefile  README.md  RELEASE_ARCHITECTURE.md  index.html  noxfile.py  pyproject.toml  requirements.txt  tox.ini
.aider.tags.cache.v3/: cache.db
.cline/: memory_bank.md
.cursor/rules/: cloud-agent-operations.mdc
.github/: copilot-instructions.md
.github/scripts/: set_version.py
.github/workflows/: cd.yml  ci.yml  docs.yml  documentation.yml  pages.yml  publish.yml  pypi_deploy.yml  release.yml  test.yml
.kiro/specs/ecosystem-foundation/: design.md  requirements.md  tasks.md
.kiro/steering/: ci.md  local-agent-operations.md  product.md  python.md  structure.md  tech.md
.kiro/steering/core/: 00-fundamentals.md  01-pr-workflow.md  02-memory-bank.md
.kiro/steering/workflows/: releases.md
.ruler/: 00-fundamentals.md  01-pr-workflow.md  02-memory-bank.md  03-ci-workflow.md  04-releases.md  05-development.md  AGENTS.md  ruler.toml
.ruler/languages/: python.md
docs/: api.rst  conf.py  getting_started.rst  index.rst  installation.rst  modules.rst  overview.rst  release-tracking-v5.1.2.md  usage.rst
docs/.ruler/: AGENTS.md  ruler.toml
docs/_static/: custom.css
docs/_templates/: custom-class-template.rst  custom-method-template.rst  custom-module-template.rst
docs/guides/: advanced_usage.rst  compatibility.rst  contributing.rst  deployment.rst  development.rst  performance.rst  security.rst  testing.rst  yaml_utils.rst
extended_data_types/: __init__.py  base64_utils.py  export_utils.py  file_data_type.py  hcl2_utils.py  json_utils.py  list_data_type.py  map_data_type.py  matcher_utils.py  nothing_utils.py  stack_utils.py  string_data_type.py  test_yaml_utils.py
extended_data_types/json_utils/: __init__.py  json_utils.py  orjson_utils.py
extended_data_types/yaml_utils/: __init__.py  constructors.py  dumpers.py  loaders.py  representers.py  tag_classes.py  utils.py
memory-bank/: activeContext.md
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-tests.py3.10.txt  requirements-tests.py3.11.txt  requirements-tests.py3.12.txt  requirements-tests.py3.9.txt
scripts/: add_future_imports.py
src/.ruler/: AGENTS.md  ruler.toml
src/extended_data_types/: __about__.py  __init__.py  base64_utils.py  export_utils.py  file_data_type.py  file_operations.py  hcl2_utils.py  import_utils.py  json_utils.py  list_data_type.py  log_utils.py  map_data_type.py  matcher_utils.py  nothing_utils.py  number_transformations.py  splitter_utils.py  stack_utils.py  string_data_type.py  string_transformations.py  toml_utils.py  type_utils.py
src/extended_data_types/cli/: __init__.py  config.py  formatting.py  main.py  utils.py
src/extended_data_types/compat/: __init__.py  filesystem.py  legacy.py  lists.py  maps.py  matching.py  serialization.py  splitter.py  stack.py  types.py  validation.py  version.py
src/extended_data_types/core/: __init__.py  base.py  dict.py  exceptions.py  inspection.py  list.py  patterns.py  set.py  types.py
src/extended_data_types/filesystem/: operations.py
src/extended_data_types/inspection/: __init__.py  schema.py  stack.py  structure.py  type_info.py
src/extended_data_types/io/: __init__.py  detection.py  git.py  operations.py  types.py
src/extended_data_types/matching/: __init__.py  patterns.py
src/extended_data_types/mcp/: __init__.py  indexer.py  models.py  registry.py  search.py
src/extended_data_types/serialization/: __init__.py  conversion.py  core.py  detection.py  exporting.py  formats.py  handlers.py  hcl2.py  importing.py  registry.py  types.py
src/extended_data_types/string/: __init__.py  core.py  types.py  validators.py
src/extended_data_types/strings/: manipulation.py
src/extended_data_types/structures/: dict.py  lists.py  splitter.py  state.py
src/extended_data_types/transformations/: __init__.py  lists.py  maps.py  matching.py  text.py  typing.py
src/extended_data_types/types/: __init__.py  collections.py
src/extended_data_types/validation/: __init__.py  core.py  validators.py
src/extended_data_types/yaml_utils/: __init__.py  constructors.py  dumpers.py  formatting.py  loaders.py  representers.py  tag_classes.py  types.py  utils.py
tests/: __init__.py  test_base64_utils.py  test_export_utils.py  test_file_data_type.py  test_file_operations.py  test_hcl2_utils.py  test_json_utils.py  test_list_data_type.py  test_log_utils.py  test_map_data_type.py  test_matcher_utils.py  test_nothing_utils.py  test_number_transformations.py  test_stack_utils.py  test_string_data_type.py  test_string_transformations.py  test_toml_utils.py  test_type_utils.py  test_yaml_utils.py
tests/.ruler/: AGENTS.md  ruler.toml
tests/cli/: __init__.py
tests/cli/commands/: test_core_commands.py  test_hcl2.py
tests/compat/: __init__.py  test_lists.py  test_maps.py  test_matching.py  test_serialization.py  test_splitter.py  test_stack.py  test_types.py
tests/core/: __init__.py  test_inspection.py  test_string_data_type.py
tests/inspection/: __init__.py  test_stack.py
tests/io/: __init__.py  test_detection.py  test_git.py  test_types.py
tests/matching/: __init__.py  test_patterns.py
tests/serialization/: __init__.py  test_detection.py  test_exporting.py  test_handlers.py  test_importing.py  test_serializers.py
tests/structures/: test_lists.py  test_splitter.py
tests/transformations/: test_lists.py  test_maps.py  test_maps_transform.py  test_matching.py  test_text.py  test_typing.py
tests/transformations/collections/: test_iteration.py  test_mapping.py  test_sequence.py  test_sets.py
tests/transformations/datetime/: test_arithmetic.py  test_comparison.py  test_format.py  test_timezone.py  (+1 more)
tests/types/: test_collections.py
tests/validation/: test_core.py  test_core_validation.py
tests/yaml_utils/: test_cloudformation.py  test_dumpers.py  test_flags.py  test_loaders.py  test_tags.py
(+81 files in other folders)
