[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "extended-data-types"
version = "0.0.0"
description = "Extended functionality for data types"
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
maintainers = ["Jon Bogaty <jon@jonbogaty.com>"]
license = "MIT"
readme = "README.md"

keywords = [
    "python3",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.32.3"
more-itertools = ">=10.3.0"
python-hcl2 = ">=4.3.4"
validators = ">=0.33.0"
inflection = ">=0.5.1"
sortedcontainers = ">=2.4.0"
numpy = ">=2.0.0"
wrapt = ">=1.16.0"
pyyaml = ">=6.0.1"
future = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.2"
pytest-mock = ">=3.14.0"
pytest-asyncio = ">=0.23.8"
sphinx = ">=7.4.6"
sphinx-rtd-theme = ">=2.0.0"
sphinx-markdown-builder = ">=0.6.6"
ruff = ">=0.5.4"
mypy = ">=1.11.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.urls]
"Tracker" = "https://github.com/jbcom/extended-data-types/issues"
"Changelog" = "https://github.com/jbcom/extended-data-types/blob/main/CHANGELOG.rst"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = "tests"
xfail_strict = true
asyncio_mode = "auto"

[tool.coverage.run]
parallel = true
branch = true
source = ["extended_data_types"]

[tool.coverage.paths]
source = ["extended_data_types", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
src = ["extended_data_types", "tests"]
exclude = ["docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "FBT",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",
    "D",
    "E",
    "S",
]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
